--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^8.0.0",
     "chart.js": "^4.5.0",
     "chrono-node": "^2.9.0",
+    "gsap": "^3.13.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
